src/pages/fr/v1.17.0/deployment/deploy-kubernetes.mdx
---
title: "Déployer sur Kubernetes"
metaTitle: "Déployer sur Kubernetes"
metaDescription: "Guide étape par étape pour déployer OpenReplay sur Kubernetes."
---

Le déploiement d'OpenReplay repose sur les [Helm Charts](https://helm.sh), ce qui le rend entièrement compatible avec Kubernetes. Nous fournissons PostgreSQL et Redis, qui sont requis pour OpenReplay. Voici comment procéder.

## Prérequis

Le déploiement d'OpenReplay sur Kubernetes nécessite :
 - Kubernetes **v1.18+**
 - helm **3.10+**
 - **PVC RWX avec permission RW pour l'id utilisateur 1001** (pour les composants partagés, si le cluster comporte plus d'un nœud). Assurez-vous de décommenter le bloc ci-dessous dans `/var/lib/openreplay/vars.yaml` et de mettre à jour le nom du PVC pour les composants **sink, storage** et **chalice** :

```yaml
# In case of multiple nodes in the kubernetes cluster,
# You'll have to create an RWX PVC for shared components.
# If it's a single node, we'll use hostVolume, which is the default for the community/oss edition.
pvcRWXName: "hostPath"
```

OpenReplay **nécessite** également `2 vCPUs, 8 GB of RAM, 50 GB of storage` pour fonctionner correctement, sinon les services backend d'OpenReplay ne démarreront tout simplement pas. Ces spécifications sont suffisantes pour un volume modéré, mais si vous prévoyez un trafic élevé, vous devriez monter en charge à partir de là.

Le déploiement a été testé sur les plateformes suivantes :
- Cluster Kube local à nœud unique
- Google Kubernetes Engine (GKE)
- Amazon Elastic Kubernetes Service (EKS)
- Microsoft Azure Kubernetes Service (AKS)
- Scaleway Elements Kubernetes (Kapsule)

## Déployer OpenReplay

Connectez-vous à votre cluster et clonez le dépôt OpenReplay :

```bash
git clone https://github.com/openreplay/openreplay.git
cd openreplay/scripts/helmcharts
```

> S'il y a plusieurs nœuds dans le cluster Kubernetes,
vous devrez créer un PVC RWX (par exemple efs, dans le cas d'AWS) pour que les conteneurs partagent les données.
S'il s'agit d'un nœud unique, nous utiliserons hostVolume, qui est la valeur par défaut pour l'installation communautaire.

Ensuite, ouvrez le fichier `vars.yaml` avec la commande `vim vars.yaml` puis remplacez :
- `domainName` : c'est là où OpenReplay sera accessible (c.-à-d. openreplay.mycompany.com)
- `postgresqlPassword` : mot de passe Postgres (définissez-le ou générez-en un aléatoire)
- `accessKey` : requis pour le service de stockage d'objets (utilisez une chaîne générée aléatoirement)
- `secretKey` : requis pour le service de stockage d'objets (utilisez une chaîne générée aléatoirement)
- `jwt_secret` : requis pour l'API (utilisez une chaîne générée aléatoirement)

Assurez-vous d'avoir installé [helm](https://helm.sh/docs/intro/install/) puis configurez OpenReplay :

```bash
cd openreplay/scripts/helmcharts
helm upgrade --install databases ./databases -n db --create-namespace --wait -f ./vars.yaml --atomic
helm upgrade --install openreplay ./openreplay -n app --create-namespace --wait -f ./vars.yaml --atomic
```

## Configurer TLS/SSL

OpenReplay traite des données utilisateur sensibles et nécessite donc HTTPS pour fonctionner. C'est obligatoire, sinon le tracker ne commencerait tout simplement pas à enregistrer. Il en va de même pour le tableau de bord : sans HTTPS, vous ne pourrez pas rejouer les sessions des utilisateurs.

Si votre cluster Kubernetes est dans le cloud (comme EKS, AKS ou GKE), alors le moyen le plus simple de gérer le SSL est de configurer un équilibreur de charge cloud et d'exécuter votre cluster derrière lui. Une autre option consiste à générer ou utiliser votre propre certificat SSL et à faire pointer votre sous-domaine (c.-à-d. openreplay.mycompany.com) vers votre cluster. Plus de détails sur les deux options ci-dessous.

### Configurer un équilibreur de charge cloud (option 1)

L'un des principaux avantages d'exécuter OpenReplay derrière un équilibreur de charge cloud est que le certificat soit géré par le fournisseur cloud. Vous trouverez ci-dessous des guides étape par étape sur la manière de créer :
- [AWS - Elastic Load Balancing](/deployment/deploy-aws#setupawsloadbalancer(option1))
- [Google - Cloud Load Balancing](/deployment/deploy-gcp#setupgoogleloadbalancer(option1))
- [Azure - Load Balancer](/deployment/deploy-azure#setupazurefrontdoor(option1))
- [Digital Ocean - Configurer TLS/SSL](/deployment/deploy-digitalocean#configuretls/ssl)

Assurez-vous ensuite que votre cluster provisionne un [type de service](https://kubernetes.io/docs/concepts/services-networking/service/#loadbalancer) `LoadBalancer` afin que le trafic provenant de l'équilibreur de charge cloud puisse être dirigé vers le backend d'OpenReplay. Maintenant, rendez-vous chez votre fournisseur de service DNS et créez un `A Record` qui pointe vers le cluster en utilisant son IP publique.

Enfin, activez `use-forwarded-headers` en décommentant la ligne ci-dessous sous la section `ingress-nginx`, dans `/var/lib/openreplay/vars.yaml` :

```yaml
ingress-nginx: &ingress-nginx
  controller:
    config:
      use-forwarded-headers: true
```

Vous êtes maintenant prêt, OpenReplay devrait être accessible sur votre sous-domaine. Vous pouvez créer un compte en visitant la page `/signup` (c.-à-d. openreplay.mycompany.com/signup).

### Apportez/générez votre certificat SSL (option 2)

Comme alternative à la création d'un équilibreur de charge, vous pouvez apporter (ou générer) votre propre certificat SSL.

1. Tout d'abord, rendez-vous chez votre fournisseur de service DNS et ajoutez un `A Record`. Utilisez le domaine que vous avez précédemment fourni lors de l'étape d'installation et faites-le pointer vers le cluster en utilisant son IP publique.

2. Si vous apportez votre propre certificat, créez un secret SSL à l'aide de la commande suivante : `kubectl create secret tls openreplay-ssl -n app --key="private_key_file.pem" --cert="certificate.crt"`.

> **Remarque :** Si vous n'avez pas de certificat, générez-en un, qui se renouvelle automatiquement, pour votre sous-domaine (celui fourni lors de l'installation) à l'aide de Let's Encrypt. Connectez-vous simplement à l'instance OpenReplay, exécutez `cd /var/lib/openreplay/openreplay/scripts/helmcharts && bash certmanager.sh` et suivez les étapes.

3. Si vous souhaitez activer la redirection de http vers https (recommandé), décommentez le bloc ci-dessous, sous la section `ingress-nginx`, dans `/var/lib/openreplay/vars.yaml` :

```yaml
ingress-nginx: &ingress-nginx
  controller:
    config:
      ssl-redirect: true
      force-ssl-redirect: true
```

Il convient de mentionner que notre `ingress-nginx` s'exécute par défaut sur les ports `80|443`, mais cela peut être facilement modifié, si nécessaire, dans `vars.yaml` :

```yaml
ingress-nginx: &ingress-nginx
  controller:
    service:
      ports:
        http: 80
        https: 443
```

4. Enfin, réinstallez NGINX d'OpenReplay :

```bash
openreplay -R
```

Vous êtes maintenant prêt, OpenReplay devrait être accessible sur votre sous-domaine. Vous pouvez créer un compte en visitant la page `/signup` (c.-à-d. openreplay.mycompany.com/signup).

## Vous avez des questions ?

N'hésitez pas à nous le faire savoir sur Slack ou via un Github Issue si vous rencontrez des difficultés sur votre plateforme. Nous serons ravis de vous aider à le mettre en marche.
